<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".About_Us">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="50px"
            android:layout_marginLeft="10px"
            android:layout_marginTop="20px"
            android:drawableLeft="@drawable/ic_baseline_menu_24"
            android:foregroundGravity="left"
            android:gravity="left"
            android:textColor="@color/baseColor"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50px"
            android:layout_marginTop="20px"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:text="@string/aboutUs"
            android:textColor="@color/baseColor"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo"
        tools:srcCompat="@drawable/logo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50px"
        android:layout_marginRight="20dp"
        android:enabled="false"
        android:paddingTop="20px"
        android:text="@string/part1OfabotUs"
        android:textColor="#100F0F"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20px"
        android:layout_marginRight="20dp"
        android:enabled="false"
        android:paddingTop="20px"
        android:text="@string/part2OfabotUs"
        android:textColor="#100F0F"
        android:textSize="18dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50px"
        android:layout_marginRight="20dp"
        android:enabled="false"
        android:paddingTop="20px"
        android:text="@string/part3OfabotUs"
        android:textColor="#100F0F"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50px"
        android:layout_marginRight="20dp"
        android:enabled="false"
        android:paddingTop="20px"
        android:text="@string/part4OfabotUs"
        android:textColor="#100F0F"
        android:textSize="18dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="140px"
        android:layout_marginRight="20dp"
        android:enabled="false"
        android:paddingTop="20px"
        android:layout_gravity="center"
        android:text="@string/madeBy"
        android:textColor="#100F0F"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"


            android:enabled="false"
            android:paddingTop="20px"
            android:layout_gravity="center"
            android:text="@string/AmaniAlmotairy"
            android:textColor="#100F0F"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:layout_marginRight="20dp"
            android:enabled="false"
            android:paddingTop="20px"
            android:layout_gravity="center"
            android:text="@string/ShahadAlGhannam"
            android:textColor="#100F0F"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"


            android:enabled="false"
            android:paddingTop="20px"
            android:layout_gravity="center"
            android:text="@string/RandaAlwatban"
            android:textColor="#100F0F"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:layout_marginRight="20dp"
            android:enabled="false"
            android:paddingTop="20px"
            android:layout_gravity="center"
            android:text="@string/AsrarAlqahtani"
            android:textColor="#100F0F"
            android:textSize="14dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"

        android:layout_marginRight="20dp"
        android:enabled="false"
        android:paddingTop="20px"
        android:layout_gravity="center"
        android:text="@string/MeaadAlhilabi"
        android:textColor="#100F0F"
        android:textSize="14dp" />


</LinearLayout>


