<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Color"
    android:orientation="vertical"
   tools:context="com.example.ginkgo.ForgetPassword">


    <TextView
        android:id="@+id/back"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="50px"
        android:layout_marginLeft="10px"
        android:layout_marginTop="20px"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
        android:foregroundGravity="left"
        android:gravity="left"
        android:text="@string/back"
        android:textColor="@color/baseColor"
        android:textStyle="bold" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"

        android:textSize="20sp"
        android:textColor="@color/baseColor"
        android:text="@string/forgetPasswordTitle"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/email" >

        <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />



    </com.google.android.material.textfield.TextInputLayout>


 

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        android:background="@drawable/shap_buttens"
        android:fontFamily="sans-serif"
        android:text="@string/sendEmail"
        android:textSize="18dp" />



</LinearLayout>