<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.ginkgo.MainPage">

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="50px"
        android:layout_marginLeft="10px"
        android:layout_marginTop="20px"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
        android:foregroundGravity="left"
        android:gravity="left"
        android:layout_gravity="left"
        android:text="@string/back"
        android:textColor="@color/baseColor"
        android:textStyle="bold" />


    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/signIn"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/shap_buttens"
            android:fontFamily="sans-serif"
            android:text="@string/signIn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25dp" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/shap_buttens"
            android:text="@string/signUp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20px"
            android:layout_marginRight="20dp"
            android:enabled="false"
            android:paddingTop="20px"
            android:text="@string/introducation"
            android:textColor="#100F0F"
            android:textSize="18dp" />
    </LinearLayout>






</LinearLayout>