<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Color"
    android:orientation="vertical"
    tools:context="com.example.ginkgo.SigningUp">


    <TextView
        android:id="@+id/back"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="50px"
        android:layout_marginLeft="10px"
        android:layout_marginTop="20px"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
        android:foregroundGravity="left"
        android:gravity="left"
        android:text="@string/back"
        android:textColor="@color/baseColor"
        android:textStyle="bold" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"

        android:text="@string/SigningUp"
        android:textColor="@color/baseColor"
        android:textSize="20sp"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="900px"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/nickName"
        android:layout_marginTop="20px">

        <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/nickName"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


    </com.google.android.material.textfield.TextInputLayout>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40px"
        android:gravity="center"
        android:text="@string/chooesCharacter"
        android:textColor="#181819"
        android:textSize="20sp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="400px"
            android:layout_weight="1"
            app:srcCompat="@drawable/male" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="400px"
            android:layout_weight="1"
            app:srcCompat="@drawable/female" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male"
            android:checked="true"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40px" />

        <RadioButton
            android:id="@+id/fmale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:layout_marginLeft="40dp" />
    </RadioGroup>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40px"
        android:gravity="center"
        android:text="@string/Dob"
        android:textColor="#181819"
        android:textSize="20sp"
        app:srcCompat="@drawable/logo" />
    <DatePicker

        android:id="@+id/Dob"
        android:layout_width="900px"
        android:calendarViewShown="false"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:datePickerMode="spinner"
        android:textColor="#181819"
        android:textSize="20sp"
       />
    <Button
        android:id="@+id/done"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:background="@drawable/shap_buttens"
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:text="@string/done"
        android:textSize="18dp" />


</LinearLayout>